--- a/Authors
+++ b/Authors
@@ -20,7 +20,7 @@
     * [Inheritance and Javascript]  alwinsol 
     * [Linked list]  daymos
     * [Basic Performance Testing] RichAWarren
-    * [Exceptions handling] ????????
+    * [Exceptions handling] daymos
     * [Best JS Resources] 4mohit
     * [JavaScript Shortcuts] ????????
 
