--- a/Authors
+++ b/Authors
@@ -11,7 +11,7 @@
        * [Array Reduce]  mikiooba
     * [Math Object Beginner Guide]  RichAWarren
     * [Modulo Operator] TroyMaeder
-    * [Variable Scope and Hoisting] 
+    * [Variable Scope and Hoisting] TroyMaeder
        * [Hoisting]  JakubSvihla
        * [Javascript Scope]  edward
     * [Regular Expressions Beginner Guide]  RichAWarren
@@ -22,7 +22,7 @@
     * [Basic Performance Testing] RichAWarren
     * [Exceptions handling] daymos
     * [Best JS Resources] 4mohit
-    * [JavaScript Shortcuts] ????????
+    * [JavaScript Shortcuts] TroyMaeder
 
 * [HTML and CSS] 
     * [Choosing a CSS Framework]  heatherlauren
